# NeuroPysnap

./: .gitignore  README.md  dodo.py  pyproject.toml
.github/workflows/: pages.yml
docs/: architecture.rst  conf.py  index.rst  usage.rst
docs/_build/html/: .buildinfo  architecture.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/.doctrees/: architecture.doctree  environment.pickle  index.doctree  usage.doctree
docs/_build/html/.doctrees/api/: modules.doctree  pysnap.cli.doctree  pysnap.config.doctree  pysnap.core.doctree  pysnap.doctree  pysnap.runtime.doctree  pysnap.terminal.doctree  pysnap.vbox.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: architecture.rst.txt  usage.rst.txt
docs/_build/html/api/: modules.html  pysnap.cli.html  pysnap.config.html  pysnap.core.html  pysnap.html  pysnap.runtime.html  pysnap.terminal.html  pysnap.vbox.html
pysnap/: __init__.py  __main__.py  docview.py  errors.py
pysnap/cli/: __init__.py  app.py  formatters.py
pysnap/config/: __init__.py  protosettings.py
pysnap/core/: __init__.py  appliance.py  models.py  service.py
pysnap/runtime/: __init__.py  sessions.py
pysnap/terminal/: __init__.py  clipboard.py  emulator.py  keymap.py  protocol.py  session.py  transport.py
pysnap/tests/: __init__.py  test_appliance.py  test_cli.py  test_docview.py  test_keymap.py  test_parsers.py  test_protosettings.py  test_service.py  test_sessions.py  test_terminal_clipboard.py  test_terminal_emulator.py  test_terminal_protocol.py  test_terminal_session.py  test_transport.py  test_vbox_client.py
pysnap/vbox/: __init__.py  client.py  parsers.py
(+25 files in other folders)
