[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysnap"
version = "0.1.1"
description = "VirtualBox appliance importer and linked clone manager."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
  { name = "PySnap Authors" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
dependencies = [
  "prompt_toolkit>=3.0.52",
  "pyte>=0.8.2",
]

[project.scripts]
pysnap = "pysnap.cli.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pysnap*"]
exclude = ["pysnap.tests*"]
